test/log/reduction/vardotacc_vv_u32_m.txt
vardotacc_vv_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_u32_m.c:30:106: error: unknown type name 'accum'; did you mean '_Accum'?
   30 | void vardotacc_vv_u32_m_golden(uint64_t *src_mask,uint64_t *dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,accum ,uint64_t *exp_result) {
      |                                                                                                          ^~~~~
      |                                                                                                          _Accum
vardotacc_vv_u32_m.c: In function 'main':
vardotacc_vv_u32_m.c:42:5: error: 'accum' undeclared (first use in this function)
   42 |     accum ;
      |     ^~~~~
vardotacc_vv_u32_m.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
vardotacc_vv_u32_m.c:48:10: error: expected ';' before 'exp_'
   48 |     accum exp_;
      |          ^~~~~
      |          ;
vardotacc_vv_u32_m.c:53:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   53 |     data_init_bool(src_mask, exp_src_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vardotacc_vv_u32_m.c:58:28: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   58 |     data_init_scalar(, exp_);
      |                            ^
vardotacc_vv_u32_m.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vardotacc_vv_u32_m.c:58:5: error: 'data_init_scalar' undeclared (first use in this function)
   58 |     data_init_scalar(, exp_);
      |     ^~~~~~~~~~~~~~~~
vardotacc_vv_u32_m.c:61:5: warning: implicit declaration of function 'vardotacc_vv_u32_m_golden'; did you mean 'vardotacc_vv_u32_m'? [-Wimplicit-function-declaration]
   61 |     vardotacc_vv_u32_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     vardotacc_vv_u32_m
vardotacc_vv_u32_m.c:64:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   64 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c);
      |     ^~~~~~
vardotacc_vv_u32_m.c:64:51: error: incompatible type for argument 3 of 'vardotacc_vv_u32_m'
   64 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c);
      |                                                   ^
      |                                                   |
      |                                                   uint32x16_t
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2083:59: note: expected 'uint64x8_t' but argument is of type 'uint32x16_t'
 2083 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      |                                                ~~~~~~~~~~~^~~
vardotacc_vv_u32_m.c:64:53: error: incompatible type for argument 4 of 'vardotacc_vv_u32_m'
   64 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c);
      |                                                     ^
      |                                                     |
      |                                                     uint16x32_t
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2083:76: note: expected 'uint32x16_t' but argument is of type 'uint16x32_t'
 2083 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      |                                                                ~~~~~~~~~~~~^~~
vardotacc_vv_u32_m.c:64:55: error: incompatible type for argument 5 of 'vardotacc_vv_u32_m'
   64 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c);
      |                                                       ^
      |                                                       |
      |                                                       uint16x32_t
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2083:93: note: expected 'uint32x16_t' but argument is of type 'uint16x32_t'
 2083 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      |                                                                                 ~~~~~~~~~~~~^~~
vardotacc_vv_u32_m.c:64:14: error: too few arguments to function 'vardotacc_vv_u32_m'
   64 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c);
      |              ^~~~~~~~~~~~~~~~~~
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2083:1: note: declared here
 2083 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      | ^~~~~~~~~~~~~~~~~~
vardotacc_vv_u32_m.c:69:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long unsigned int' [-Wformat=]
   69 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long unsigned int
      |                                          %llx
vardotacc_vv_u32_m.c:69:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint64_t' {aka 'long long unsigned int'} [-Wformat=]
   69 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint64_t {aka long long unsigned int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed